--- a/Site Escola HTML/Formulario.html
+++ b/Site Escola HTML/Formulario.html
@@ -14,13 +14,13 @@
     <form action="Formulario.html">
         <label for="nome">Nome: </label>
         <br>
-        <input type="text" id="nome" name="Nome" ><br></br>
+        <input type="text" id="nome" name="Nome" required><br></br>
         <label for="matricula">Matricula: </label>
         <br>
-        <input type="text" id="matricula" name="Matricula" ><br></br>
+        <input type="text" id="matricula" name="Matricula" required><br></br>
         <label for="email" >Email: </label>
         <br>
-        <input type="text" id="email" name="Email" ><br></br>
+        <input type="text" id="email" name="Email" required><br></br>
         <button type="reset">Limpar informações</button>
         </a><input type="submit" value="Enviar" required>
         <p>Somente Iniciar o teste depois de clicar em enviar.</p>
