--- a/Site Escola HTML/siteEscola.html
+++ b/Site Escola HTML/siteEscola.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Site escola</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+<title class="titulo">Escola da Layane</title>
+<link rel="icon" type="image/x-icon" href="NikeLogo.png">
 </head>
 <body>
+    <header class="headerescola">
+        <h1  class="hdescola">ESCOLA DA LAYANE</h1>
     <div class="home">
-        <h1>Entre no Formulario abaixo</h1>
-        <a href="Formulario.html">ENTRAR</a>
-
-        
+        <br><br>
+        </a>
+        <input type="button" class="BotaoEntrar" value="ENTRAR" onclick="window.location.href='formulario.html';">
+    <nav class="menu1">
+        <ul>
+        <li>Home</li>
+        <li>Contato</li>
+        <li>Ajuda</li>
+    </ul>
+    </nav>
+</header>
 </body>
 </html>
