--- a/Site Escola HTML/testinicio.html
+++ b/Site Escola HTML/testinicio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    
   </head>
 <body>
   <header>
@@ -25,24 +26,24 @@
     <br> <br>
     <p>Selecione a resposta:</p>
       <input type="radio" id="Alt1" name="Questao1" value="0" required>
-      <label for="html">a) 1/4</label><br>
+      <label for="Alt1">a) 1/4</label><br>
 
       <input type="radio" id="Alt2" name="Questao1" value="0">
-      <label for="css">b) 1/3</label><br>
+      <label for="Alt2">b) 1/3</label><br>
 
       <input type="radio" id="Alt3" name="Questao1" value="0">
-      <label for="javascript">c) 3/8 </label><br>
+      <label for="Alt3">c) 3/8 </label><br>
 
       <input type="radio" id="Alt4" name="Questao1" value="1">
-      <label for="javascript">d) 2/5 </label><br>
+      <label for="Alt4">d) 2/5 </label><br>
 
       <input type="radio" id="Alt5" name="Questao1" value="0">
-      <label for="javascript">e) 3/7</label><br><br>
+      <label for="Alt5">e) 3/7</label><br><br>
 
     Calculo: <input type="file" id="Q1Calc" name="Questao1" required>
     <br>
-    <div class="divisao">----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-
+    <div class="divisao">
+      <hr>
     </div>
     <!--SEGUNDA QUESTAO-->
     <br><br><br>
@@ -52,22 +53,23 @@
       <br><br>
     <p>Selecione a resposta:</p>
       <input type="radio" id="Alt1" name="Questao2" value="0" required>
-      <label for="html">a) 16.</label><br>
+      <label for="Alt1">a) 16.</label><br>
 
       <input type="radio" id="Alt2" name="Questao2" value="0">
-      <label for="css">b) -6.</label><br>
+      <label for="Alt2">b) -6.</label><br>
 
       <input type="radio" id="Alt3" name="Questao2" value="0">
-      <label for="javascript">c) 10.</label><br>
+      <label for="Alt3">c) 10.</label><br>
 
       <input type="radio" id="Alt4" name="Questao2" value="0">
-      <label for="javascript">d) 5.</label><br>
+      <label for="Alt4">d) 5.</label><br>
 
       <input type="radio" id="Alt5" name="Questao2" value="1">
-      <label for="javascript">e) 6.</label><br><br>
+      <label for="Alt5">e) 6.</label><br><br>
     Calculo: <input type="file" id="Q2Calc" name="Questao2" required>
     <br>
-   <div class="divisao">----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+   <div class="divisao">
+    <hr>
    </div>
     <!--TERCEIRA QUESTAO-->
     <h3 class="TituloQuestao">3° Questão</h3> 
@@ -79,23 +81,23 @@
     <br><br>
     <p>Selecione a resposta:</p>
       <input type="radio" id="Alt1" name="Questao3" value="0" required>
-      <label for="html">a) 10 litros.</label><br>
+      <label for="Alt1">a) 10 litros.</label><br>
 
       <input type="radio" id="Alt2" name="Questao3" value="0">
-      <label for="css">b) 12 litros.</label><br>
+      <label for="Alt2">b) 12 litros.</label><br>
 
       <input type="radio" id="Alt3" name="Questao3" value="0">
-      <label for="javascript">c) 15 litros.</label><br>
+      <label for="Alt3">c) 15 litros.</label><br>
 
       <input type="radio" id="Alt4" name="Questao3" value="0">
-      <label for="javascript">d) 25 litros.</label><br>
+      <label for="Alt4">d) 25 litros.</label><br>
 
       <input type="radio" id="Alt5" name="Questao3" value="1">
-      <label for="javascript">e) 30 litros.</label><br><br>
+      <label for="Alt5">e) 30 litros.</label><br><br>
     Calculo: <input type="file" id="Q3Calc" name="Questao3" required>
     <br>
     <div class="divisao">
-      ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+      <hr>
     </div>
       <!--QUARTA QUESTÃO-->
     <br><br><br>
@@ -105,23 +107,23 @@
     <br><br>
     <p>Selecione a resposta:</p>
       <input type="radio" id="Alt1" name="Questao3" value="0" required>
-      <label for="html">a) 12/24</label><br>
+      <label for="Alt1">a) 12/24</label><br>
 
       <input type="radio" id="Alt2" name="Questao3" value="0">
-      <label for="css">b) 2/2</label><br>
+      <label for="Alt2">b) 2/2</label><br>
 
       <input type="radio" id="Alt3" name="Questao3" value="0">
-      <label for="javascript">c) 1/3</label><br>
+      <label for="Alt3">c) 1/3</label><br>
 
       <input type="radio" id="Alt4" name="Questao3" value="0">
-      <label for="javascript">d) 3/4</label><br>
+      <label for="Alt4">d) 3/4</label><br>
 
       <input type="radio" id="Alt5" name="Questao3" value="1">
-      <label for="javascript">e) 3/8</label><br><br>
+      <label for="Alt5">e) 3/8</label><br><br>
     Calculo: <input type="file" id="Q4Calc" name="Questao4" required>
     <br>
     <div class="divisao">
-      ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+      <hr>
     </div>
     <br><br><br>
     <!--QUINTA QUESTAO-->
@@ -132,22 +134,22 @@
     <br><br>
     <p>Selecione a resposta:</p>
       <input type="radio" id="Alt1" name="Questao5" value="0" required>
-      <label for="html">a) 100g</label><br>
+      <label for="Alt1">a) 100g</label><br>
 
       <input type="radio" id="Alt2" name="Questao5" value="0">
-      <label for="css">b) 250g</label><br>
+      <label for="Alt2">b) 250g</label><br>
 
       <input type="radio" id="Alt3" name="Questao5" value="1">
-      <label for="javascript">c) 400g</label><br>
+      <label for="Alt3">c) 400g</label><br>
 
       <input type="radio" id="Alt4" name="Questao5" value="0">
-      <label for="javascript">d) 300g</label><br>
+      <label for="Alt4">d) 300g</label><br>
 
       <input type="radio" id="Alt5" name="Questao5" value="0">
-      <label for="javascript">e) 500g</label><br><br>
+      <label for="Alt5">e) 500g</label><br><br>
     Calculo: <input type="file" id="Q5Calc" name="Questao5" required> <br>
     <div class="divisao">
-      ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+      <hr>
     </div>
 
     <br>
@@ -160,20 +162,22 @@
     <br><br>
     <p>Selecione a resposta:</p>
       <input type="radio" id="Alt1" name="Questao6" value="0" required>
-      <label for="html">a) O-lh-o.</label><br>
+      <label for="Alt1">a) O-lh-o.</label><br>
 
       <input type="radio" id="Alt2" name="Questao6" value="0">
-      <label for="css">b) Tele-visão</label><br>
+      <label for="Alt2">b) Tele-visão</label><br>
 
       <input type="radio" id="Alt3" name="Questao6" value="1">
-      <label for="javascript">c) Fro-nha.</label><br>
+      <label for="Alt3">c) Fro-nha.</label><br>
 
       <input type="radio" id="Alt4" name="Questao6" value="0">
-      <label for="javascript">d) Ca-rr-oça.</label><br>
+      <label for="Alt4">d) Ca-rr-oça.</label><br>
 
       <input type="radio" id="Alt5" name="Questao6" value="0">
-      <label for="javascript">e) Java-li.</label><br><br>
-    <div class="divisao">----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</div>
+      <label for="Alt5">e) Java-li.</label><br><br>
+    <div class="divisao">
+      <hr>
+    </div>
     <!--SETIMA QUESTAO-->
     <h3 class="TituloQuestao">7° Questão</h3> 
     <p class="questao">Sobra a tonicidade das palavras, assinale a alternativa que contém uma palavra paroxítona.
@@ -181,21 +185,21 @@
     <br><br>
     <p>Selecione a resposta:</p>
       <input type="radio" id="Alt1" name="Questao7" value="0" required>
-      <label for="html">a) Frígido.</label><br>
+      <label for="Alt1">a) Frígido.</label><br>
 
       <input type="radio" id="Alt2" name="Questao7" value="0">
-      <label for="css">b) Cristal.</label><br>
+      <label for="Alt2">b) Cristal.</label><br>
 
       <input type="radio" id="Alt3" name="Questao7" value="0">
-      <label for="javascript">c) Ópera.</label><br>
+      <label for="Alt3">c) Ópera.</label><br>
 
       <input type="radio" id="Alt4" name="Questao7" value="1">
-      <label for="javascript">d) Pensamento.</label><br>
+      <label for="Alt4">d) Pensamento.</label><br>
 
       <input type="radio" id="Alt5" name="Questao7" value="0">
-      <label for="javascript">e) Máximo.</label><br><br>
+      <label for="Alt5">e) Máximo.</label><br><br>
 <div class="divisao">
-  ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+  <hr>
 </div>
     <!--OITAVA QUESTAO-->
     <h3 class="TituloQuestao">8° Questão</h3> 
@@ -204,23 +208,67 @@
     <br><br>
     <p>Selecione a resposta:</p>
       <input type="radio" id="Alt1" name="Questao8" value="0" required>
-      <label for="html">a) Frígido.</label><br>
+      <label for="Alt1">a) Frígido.</label><br>
 
       <input type="radio" id="Alt2" name="Questao8" value="0">
-      <label for="css">b) Cristal.</label><br>
+      <label for="Alt2">b) Cristal.</label><br>
 
       <input type="radio" id="Alt3" name="Questao8" value="0">
-      <label for="javascript">c) Ópera.</label><br>
+      <label for="Alt3">c) Ópera.</label><br>
 
       <input type="radio" id="Alt4" name="Questao8" value="1">
-      <label for="javascript">d) Pensamento.</label><br>
+      <label for="Alt4">d) Pensamento.</label><br>
 
       <input type="radio" id="Alt5" name="Questao8" value="0">
-      <label for="javascript">e) Máximo.</label><br><br>
+      <label for="Alt5">e) Máximo.</label><br><br>
 <div class="divisao"> 
-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+<hr>
 </div>
+    <!--NONA QUESTAO-->
+    <h3 class="TituloQuestao">9° Questão</h3> 
+    <p class="questao">Qual das alternativas contém apenas substantivos compostos?
 
+
+    </p>
+    <br><br>
+    <p>Selecione a resposta:</p>
+      <input type="radio" id="Alt1" name="Questao9" value="1" required>
+      <label for="Alt1">a) lobisomem, ex-namorado, micro-ondas.</label><br>
+
+      <input type="radio" id="Alt2" name="Questao9" value="0">
+      <label for="Alt2">b) pernilongo, aguardente, país.</label><br>
+
+      <input type="radio" id="Alt3" name="Questao9" value="0">
+      <label for="Alt3">c) autorretrato, beija-flor, chave.</label><br>
+
+      <input type="radio" id="Alt4" name="Questao9" value="0">
+      <label for="Alt4">d) celular, pandemia, amigos.</label><br>
+
+      <input type="radio" id="Alt5" name="Questao9" value="0">
+      <label for="Alt5">e) porta-chave, salário-família, beleza.</label><br><br>
+
+<div class="divisao">
+  <hr>
+</div>
+    <!--DECIMA QUESTAO-->
+    <h3 class="TituloQuestao">10° Questão</h3>
+    <p class="questao">Capixaba, paroara e fluminense são respectivamente os adjetivos pátrios de:
+  <br><br>
+  <p>Selecione a resposta:</p>
+    <input type="radio" id="Alt1" name="Questao9" value="0" required>
+    <label for="Alt1">a) Rio Grande do Norte, Paraíba e Rio de Janeiro (capital).</label><br>
+
+    <input type="radio" id="Alt2" name="Questao9" value="0">
+    <label for="Alt2">b) Chipre, Papua Nova Guiné e Filipinas.</label><br>
+
+    <input type="radio" id="Alt3" name="Questao9" value="0">
+    <label for="Alt3">c) Vitória, Pará e Rio de Janeiro (estado)</label><br>
+
+    <input type="radio" id="Alt4" name="Questao9" value="0">
+    <label for="Alt4">d) Natal, Paraíba e Rio de Janeiro (capital)</label><br>
+
+    <input type="radio" id="Alt5" name="Questao9" value="1">
+    <label for="Alt5">e) Espírito Santo, Pará e Rio de Janeiro (estado)</label><br><br>
 
     <br>
     <br>
